lang/tests/contract/ui/fail/32-no-interface-name.rs
use liquid_lang as liquid;

#[liquid::interface]
mod foo {
    extern "liquid" {
        fn bar();
    }
}

fn main() {}