lang/tests/contract/ui/fail/32-no-interface-name.stderr
error: expected `name` parameter in `#[liquid::interface]` attribute
 --> $DIR/32-no-interface-name.rs:3:1
  |
3 | #[liquid::interface]
  | ^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `liquid::interface` (in Nightly builds, run with -Z macro-backtrace for more info)
